# copier-ruff-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
scripts/: bump_version.sh
src/copier_ruff/: __init__.py
