[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copier-ruff-pre-commit"
authors = [
    {name = "Patrick Schleiter", email = "git.pschleiter@gmail.com"},
]
description = "A pre-commit hook for running Ruff on Copier templates."
readme="README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "copier",
    "pyyaml",
    "ruff~=0.9.2",
]
version = "0.9.2"

[project.scripts]
copier-ruff = "copier_ruff:hook"

## ruff - Formatting ##
[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
include = [
    "src/**/*.py",
    "src/**/*.pyi",
]

[tool.ruff.lint]
preview = true
unfixable = [
    "F401",  # Don't touch unused imports
]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

## Hatch - Version ##
[tool.hatch.build]
packages = ["src/copier_ruff"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.editorconfig",
    "/.pre-commit-hooks.yaml",
    "/.pre-commit-config.yaml",
]

## Hatch - Envs ##
# Default environment with production dependencies
[tool.hatch.envs.default]
installer = "uv"
python = "3.12"
post-install-commands = ["pre-commit install"]

# Lint and formatting environment
[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff~=0.9.2"]
config-path = "none"
