[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
[project]
name = "copier-ruff-pre-commit"
authors = [
    {name = "Patrick Schleiter", email = "git.pschleiter@gmail.com"},
]
description = "A pre-commit hook for running Ruff on Copier templates."
readme="README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "copier",
    "pyyaml",
    "ruff~=0.9.6",
]
version = "0.9.6"

[project.scripts]
copier-ruff = "copier_ruff:hook"

## uv-build - Build Backend ##
[tool.uv.build-backend]
module-name = "copier_ruff"

## ruff - Formatting ##
[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
include = [
    "src/**/*.py",
    "src/**/*.pyi",
]

[tool.ruff.lint]
preview = true
unfixable = [
    "F401",  # Don't touch unused imports
]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
